--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#007bff">
   <title>TODO List</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
