--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>TODO PWA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#007bff">
-  <title>TODO List</title>
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="container">
-    <h1>TODO List</h1>
+    <h1>TODO</h1>
     <form id="todo-form">
       <input type="text" id="todo-input" placeholder="Add a task..." required>
       <button type="submit">Add</button>
